Antlr/src/SavedFSM/output/MonitorParser.py
# $ANTLR 3.2 Sep 23, 2009 12:02:23 /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g 2012-01-16 20:02:59

import sys
from antlr3 import *
from antlr3.compat import set, frozenset
from antlr3.debug import *

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
RESV=12
ANNOTATION=23
ASSERTION=26
PARALLEL=19
ID=24
EOF=-1
PROTOCOL=20
TYPE=14
T__55=55
ML_COMMENT=30
T__56=56
INTERACTION=4
T__57=57
T__58=58
T__51=51
T__52=52
T__53=53
T__54=54
T__59=59
FULLSTOP=11
PLUS=7
SEND=13
DIGIT=28
T__50=50
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
T__45=45
LINE_COMMENT=31
T__48=48
T__49=49
RECLABEL=18
NUMBER=27
WHITESPACE=29
INT=5
MINUS=8
MULT=9
VALUE=15
ASSERT=21
UNORDERED=17
StringLiteral=25
T__32=32
T__33=33
GLOBAL_ESCAPE=22
T__34=34
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
BRANCH=16
DIV=10
STRING=6

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "INTERACTION", "INT", "STRING", "PLUS", "MINUS", "MULT", "DIV", "FULLSTOP", 
    "RESV", "SEND", "TYPE", "VALUE", "BRANCH", "UNORDERED", "RECLABEL", 
    "PARALLEL", "PROTOCOL", "ASSERT", "GLOBAL_ESCAPE", "ANNOTATION", "ID", 
    "StringLiteral", "ASSERTION", "NUMBER", "DIGIT", "WHITESPACE", "ML_COMMENT", 
    "LINE_COMMENT", "'import'", "'protocol'", "','", "';'", "'from'", "'as'", 
    "'at'", "'{'", "'}'", "'('", "')'", "'role'", "'introduces'", "':'", 
    "'to'", "'choice'", "'or'", "'repeat'", "'rec'", "'end'", "'run'", "'inline'", 
    "'parallel'", "'and'", "'do'", "'interrupt'", "'by'", "'unordered'"
]




class MonitorParser(DebugParser):
    grammarFileName = "/homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g"
    antlr_version = version_str_to_tuple("3.2 Sep 23, 2009 12:02:23")
    antlr_version_str = "3.2 Sep 23, 2009 12:02:23"
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        debug_socket = kwargs.pop('debug_socket', None)
        port = kwargs.pop('port', None)
        super(MonitorParser, self).__init__(input, state, *args, **kwargs)

        self.dfa3 = self.DFA3(
            self, 3,
            eot = self.DFA3_eot,
            eof = self.DFA3_eof,
            min = self.DFA3_min,
            max = self.DFA3_max,
            accept = self.DFA3_accept,
            special = self.DFA3_special,
            transition = self.DFA3_transition
            )

        self.dfa18 = self.DFA18(
            self, 18,
            eot = self.DFA18_eot,
            eof = self.DFA18_eof,
            min = self.DFA18_min,
            max = self.DFA18_max,
            accept = self.DFA18_accept,
            special = self.DFA18_special,
            transition = self.DFA18_transition
            )

        self.dfa33 = self.DFA33(
            self, 33,
            eot = self.DFA33_eot,
            eof = self.DFA33_eof,
            min = self.DFA33_min,
            max = self.DFA33_max,
            accept = self.DFA33_accept,
            special = self.DFA33_special,
            transition = self.DFA33_transition
            )






        self._adaptor = None
        self.adaptor = CommonTreeAdaptor()
        self.ruleLevel = 0

        if self._dbg is None:
            proxy = DebugEventSocketProxy(self, adaptor=self._adaptor,
                                          debug=debug_socket, port=port)
            self.setDebugListener(proxy)
            self.adaptor.setDebugListener(proxy)
            self.input.setDebugListener(proxy)
            #self.setTokenStream(DebugTokenStream(self.input, proxy))
            proxy.handshake()



    ruleNames = [
        "invalidRule", "protocolName", "synpred39_Monitor", "importTypeStatement", 
        "typeReferenceDef", "synpred23_Monitor", "activityList", "synpred34_Monitor", 
        "importProtocolStatement", "synpred52_Monitor", "factor", "synpred43_Monitor", 
        "synpred46_Monitor", "synpred47_Monitor", "parallelDef", "synpred44_Monitor", 
        "description", "parameterDefs", "expr", "synpred16_Monitor", "unorderedDef", 
        "synpred57_Monitor", "synpred12_Monitor", "synpred1_Monitor", "primitivetype", 
        "synpred40_Monitor", "introducesDef", "synpred50_Monitor", "term", 
        "interruptDef", "synpred55_Monitor", "synpred2_Monitor", "synpred9_Monitor", 
        "synpred15_Monitor", "interactionSignatureDef", "synpred42_Monitor", 
        "activityListDef", "repeatDef", "synpred10_Monitor", "synpred51_Monitor", 
        "synpred18_Monitor", "runDef", "synpred56_Monitor", "inlineDef", 
        "dataTypeDef", "synpred49_Monitor", "synpred4_Monitor", "recursionDef", 
        "synpred36_Monitor", "synpred24_Monitor", "synpred14_Monitor", "choiceDef", 
        "synpred54_Monitor", "assertDef", "synpred33_Monitor", "roleName", 
        "endDef", "blockDef", "synpred11_Monitor", "declarationName", "synpred27_Monitor", 
        "synpred31_Monitor", "importTypeDef", "synpred13_Monitor", "synpred3_Monitor", 
        "synpred8_Monitor", "parameterDef", "synpred28_Monitor", "simpleName", 
        "synpred32_Monitor", "synpred37_Monitor", "synpred41_Monitor", "synpred45_Monitor", 
        "globalEscapeDef", "roleDef", "recBlockDef", "synpred17_Monitor", 
        "synpred21_Monitor", "synpred7_Monitor", "synpred30_Monitor", "directedChoiceDef", 
        "synpred29_Monitor", "synpred35_Monitor", "synpred20_Monitor", "synpred48_Monitor", 
        "importProtocolDef", "synpred26_Monitor", "protocolRefDef", "protocolDef", 
        "synpred53_Monitor", "synpred25_Monitor", "protocolBlockDef", "synpred38_Monitor", 
        "labelName", "interactionDef", "synpred58_Monitor", "doBlockDef", 
        "onMessageDef", "synpred6_Monitor", "synpred5_Monitor", "activityDef", 
        "synpred22_Monitor", "synpred19_Monitor", "parameter"
        ]
     
    def getRuleLevel(self):
        return self.ruleLevel

    def incRuleLevel(self):
        self.ruleLevel += 1

    def decRuleLevel(self):
        self.ruleLevel -= 1

    def evalPredicate(self, result, predicate):
        self._dbg.semanticPredicate(result, predicate)
        return result


    def setTreeAdaptor(self, adaptor):
        self._adaptor = DebugTreeAdaptor(self.dbg, adaptor)

    def getTreeAdaptor(self):
        return self._adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)



    class description_return(ParserRuleReturnScope):
        def __init__(self):
            super(MonitorParser.description_return, self).__init__()

            self.tree = None




    # $ANTLR start "description"
    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:1: description : ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef ;
    def description(self, ):

        retval = self.description_return()
        retval.start = self.input.LT(1)

        root_0 = None

        ANNOTATION1 = None
        ANNOTATION4 = None
        importProtocolStatement2 = None

        importTypeStatement3 = None

        protocolDef5 = None


        ANNOTATION1_tree = None
        ANNOTATION4_tree = None
        stream_ANNOTATION = RewriteRuleTokenStream(self._adaptor, "token ANNOTATION")
        stream_importTypeStatement = RewriteRuleSubtreeStream(self._adaptor, "rule importTypeStatement")
        stream_protocolDef = RewriteRuleSubtreeStream(self._adaptor, "rule protocolDef")
        stream_importProtocolStatement = RewriteRuleSubtreeStream(self._adaptor, "rule importProtocolStatement")
        try:
            self._dbg.enterRule(self.getGrammarFileName(), "description")
            if self.getRuleLevel() == 0:
                self._dbg.commence();
            self.incRuleLevel()
            self._dbg.location(38, 1)

            try:
                try:
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:12: ( ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef )
                    self._dbg.enterAlt(1)

                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef
                    pass 
                    self._dbg.location(38, 14)
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )*
                    try:
                        self._dbg.enterSubRule(3)
                        while True: #loop3
                            alt3 = 2
                            try:
                                self._dbg.enterDecision(3)
                                try:
                                    self.isCyclicDecision = True
                                    alt3 = self.dfa3.predict(self.input)

                                except NoViableAltException, nvae:
                                    self._dbg.recognitionException(nvae)
                                    raise

                            finally:
                                self._dbg.exitDecision(3)
                            if alt3 == 1:
                                self._dbg.enterAlt(1)

                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:16: ( ANNOTATION )* ( importProtocolStatement | importTypeStatement )
                                pass 
                                self._dbg.location(38, 16)
                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:16: ( ANNOTATION )*
                                try:
                                    self._dbg.enterSubRule(1)
                                    while True: #loop1
                                        alt1 = 2
                                        try:
                                            self._dbg.enterDecision(1)
                                            LA1_0 = self.input.LA(1)

                                            if (LA1_0 == ANNOTATION) :
                                                alt1 = 1


                                        finally:
                                            self._dbg.exitDecision(1)
                                        if alt1 == 1:
                                            self._dbg.enterAlt(1)

                                            # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:18: ANNOTATION
                                            pass 
                                            self._dbg.location(38, 18)
                                            ANNOTATION1=self.match(self.input, ANNOTATION, self.FOLLOW_ANNOTATION_in_description226) 
                                            if self._state.backtracking == 0:
                                                stream_ANNOTATION.add(ANNOTATION1)


                                        else:
                                            break #loop1
                                finally:
                                    self._dbg.exitSubRule(1)

                                self._dbg.location(38, 32)
                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:32: ( importProtocolStatement | importTypeStatement )
                                alt2 = 2
                                try:
                                    self._dbg.enterSubRule(2)
                                    try:
                                        self._dbg.enterDecision(2)
                                        LA2_0 = self.input.LA(1)

                                        if (LA2_0 == 32) :
                                            LA2_1 = self.input.LA(2)

                                            if (LA2_1 == 33) :
                                                alt2 = 1
                                            elif ((ID <= LA2_1 <= StringLiteral)) :
                                                alt2 = 2
                                            else:
                                                if self._state.backtracking > 0:
                                                    raise BacktrackingFailed

                                                nvae = NoViableAltException("", 2, 1, self.input)

                                                self._dbg.recognitionException(nvae)
                                                raise nvae

                                        else:
                                            if self._state.backtracking > 0:
                                                raise BacktrackingFailed

                                            nvae = NoViableAltException("", 2, 0, self.input)

                                            self._dbg.recognitionException(nvae)
                                            raise nvae

                                    finally:
                                        self._dbg.exitDecision(2)
                                    if alt2 == 1:
                                        self._dbg.enterAlt(1)

                                        # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:34: importProtocolStatement
                                        pass 
                                        self._dbg.location(38, 34)
                                        self._state.following.append(self.FOLLOW_importProtocolStatement_in_description233)
                                        importProtocolStatement2 = self.importProtocolStatement()

                                        self._state.following.pop()
                                        if self._state.backtracking == 0:
                                            stream_importProtocolStatement.add(importProtocolStatement2.tree)


                                    elif alt2 == 2:
                                        self._dbg.enterAlt(2)

                                        # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:60: importTypeStatement
                                        pass 
                                        self._dbg.location(38, 60)
                                        self._state.following.append(self.FOLLOW_importTypeStatement_in_description237)
                                        importTypeStatement3 = self.importTypeStatement()

                                        self._state.following.pop()
                                        if self._state.backtracking == 0:
                                            stream_importTypeStatement.add(importTypeStatement3.tree)



                                finally:
                                    self._dbg.exitSubRule(2)


                            else:
                                break #loop3
                    finally:
                        self._dbg.exitSubRule(3)

                    self._dbg.location(38, 85)
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:85: ( ANNOTATION )*
                    try:
                        self._dbg.enterSubRule(4)
                        while True: #loop4
                            alt4 = 2
                            try:
                                self._dbg.enterDecision(4)
                                LA4_0 = self.input.LA(1)

                                if (LA4_0 == ANNOTATION) :
                                    alt4 = 1


                            finally:
                                self._dbg.exitDecision(4)
                            if alt4 == 1:
                                self._dbg.enterAlt(1)

                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:38:87: ANNOTATION
                                pass 
                                self._dbg.location(38, 87)
                                ANNOTATION4=self.match(self.input, ANNOTATION, self.FOLLOW_ANNOTATION_in_description246) 
                                if self._state.backtracking == 0:
                                    stream_ANNOTATION.add(ANNOTATION4)


                            else:
                                break #loop4
                    finally:
                        self._dbg.exitSubRule(4)

                    self._dbg.location(38, 101)
                    self._state.following.append(self.FOLLOW_protocolDef_in_description251)
                    protocolDef5 = self.protocolDef()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_protocolDef.add(protocolDef5.tree)

                    # AST Rewrite
                    # elements: protocolDef
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:

                        retval.tree = root_0

                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 38:113: -> protocolDef
                        self._dbg.location(38, 116)
                        self._adaptor.addChild(root_0, stream_protocolDef.nextTree())



                        retval.tree = root_0



                    retval.stop = self.input.LT(-1)

                    if self._state.backtracking == 0:

                        retval.tree = self._adaptor.rulePostProcessing(root_0)
                        self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                except RecognitionException, re:
                    self.reportError(re)
                    self.recover(self.input, re)
                    retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
            finally:

                pass

            self._dbg.location(38, 127)
        finally:
            self._dbg.exitRule(self.getGrammarFileName(), "description")
            self.decRuleLevel()
            if self.getRuleLevel() == 0:
                 self._dbg.terminate()

        return retval

    # $ANTLR end "description"

    class importProtocolStatement_return(ParserRuleReturnScope):
        def __init__(self):
            super(MonitorParser.importProtocolStatement_return, self).__init__()

            self.tree = None




    # $ANTLR start "importProtocolStatement"
    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:40:1: importProtocolStatement : 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' ;
    def importProtocolStatement(self, ):

        retval = self.importProtocolStatement_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal6 = None
        string_literal7 = None
        char_literal9 = None
        char_literal11 = None
        importProtocolDef8 = None

        importProtocolDef10 = None


        string_literal6_tree = None
        string_literal7_tree = None
        char_literal9_tree = None
        char_literal11_tree = None

        try:
            self._dbg.enterRule(self.getGrammarFileName(), "importProtocolStatement")
            if self.getRuleLevel() == 0:
                self._dbg.commence();
            self.incRuleLevel()
            self._dbg.location(40, 1)

            try:
                try:
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:40:24: ( 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' )
                    self._dbg.enterAlt(1)

                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:40:26: 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';'
                    pass 
                    root_0 = self._adaptor.nil()

                    self._dbg.location(40, 26)
                    string_literal6=self.match(self.input, 32, self.FOLLOW_32_in_importProtocolStatement262)
                    if self._state.backtracking == 0:

                        string_literal6_tree = self._adaptor.createWithPayload(string_literal6)
                        self._adaptor.addChild(root_0, string_literal6_tree)

                    self._dbg.location(40, 35)
                    string_literal7=self.match(self.input, 33, self.FOLLOW_33_in_importProtocolStatement264)
                    if self._state.backtracking == 0:

                        string_literal7_tree = self._adaptor.createWithPayload(string_literal7)
                        self._adaptor.addChild(root_0, string_literal7_tree)

                    self._dbg.location(40, 46)
                    self._state.following.append(self.FOLLOW_importProtocolDef_in_importProtocolStatement266)
                    importProtocolDef8 = self.importProtocolDef()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, importProtocolDef8.tree)
                    self._dbg.location(40, 64)
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:40:64: ( ',' importProtocolDef )*
                    try:
                        self._dbg.enterSubRule(5)
                        while True: #loop5
                            alt5 = 2
                            try:
                                self._dbg.enterDecision(5)
                                LA5_0 = self.input.LA(1)

                                if (LA5_0 == 34) :
                                    alt5 = 1


                            finally:
                                self._dbg.exitDecision(5)
                            if alt5 == 1:
                                self._dbg.enterAlt(1)

                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:40:66: ',' importProtocolDef
                                pass 
                                self._dbg.location(40, 69)
                                char_literal9=self.match(self.input, 34, self.FOLLOW_34_in_importProtocolStatement270)
                                self._dbg.location(40, 71)
                                self._state.following.append(self.FOLLOW_importProtocolDef_in_importProtocolStatement273)
                                importProtocolDef10 = self.importProtocolDef()

                                self._state.following.pop()
                                if self._state.backtracking == 0:
                                    self._adaptor.addChild(root_0, importProtocolDef10.tree)


                            else:
                                break #loop5
                    finally:
                        self._dbg.exitSubRule(5)

                    self._dbg.location(40, 95)
                    char_literal11=self.match(self.input, 35, self.FOLLOW_35_in_importProtocolStatement278)



                    retval.stop = self.input.LT(-1)

                    if self._state.backtracking == 0:

                        retval.tree = self._adaptor.rulePostProcessing(root_0)
                        self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                except RecognitionException, re:
                    self.reportError(re)
                    self.recover(self.input, re)
                    retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
            finally:

                pass

            self._dbg.location(40, 97)
        finally:
            self._dbg.exitRule(self.getGrammarFileName(), "importProtocolStatement")
            self.decRuleLevel()
            if self.getRuleLevel() == 0:
                 self._dbg.terminate()

        return retval

    # $ANTLR end "importProtocolStatement"

    class importProtocolDef_return(ParserRuleReturnScope):
        def __init__(self):
            super(MonitorParser.importProtocolDef_return, self).__init__()

            self.tree = None




    # $ANTLR start "importProtocolDef"
    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:42:1: importProtocolDef : ID 'from' StringLiteral ;
    def importProtocolDef(self, ):

        retval = self.importProtocolDef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        ID12 = None
        string_literal13 = None
        StringLiteral14 = None

        ID12_tree = None
        string_literal13_tree = None
        StringLiteral14_tree = None

        try:
            self._dbg.enterRule(self.getGrammarFileName(), "importProtocolDef")
            if self.getRuleLevel() == 0:
                self._dbg.commence();
            self.incRuleLevel()
            self._dbg.location(42, 1)

            try:
                try:
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:42:18: ( ID 'from' StringLiteral )
                    self._dbg.enterAlt(1)

                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:42:20: ID 'from' StringLiteral
                    pass 
                    root_0 = self._adaptor.nil()

                    self._dbg.location(42, 20)
                    ID12=self.match(self.input, ID, self.FOLLOW_ID_in_importProtocolDef287)
                    if self._state.backtracking == 0:

                        ID12_tree = self._adaptor.createWithPayload(ID12)
                        self._adaptor.addChild(root_0, ID12_tree)

                    self._dbg.location(42, 29)
                    string_literal13=self.match(self.input, 36, self.FOLLOW_36_in_importProtocolDef289)
                    self._dbg.location(42, 31)
                    StringLiteral14=self.match(self.input, StringLiteral, self.FOLLOW_StringLiteral_in_importProtocolDef292)
                    if self._state.backtracking == 0:

                        StringLiteral14_tree = self._adaptor.createWithPayload(StringLiteral14)
                        self._adaptor.addChild(root_0, StringLiteral14_tree)




                    retval.stop = self.input.LT(-1)

                    if self._state.backtracking == 0:

                        retval.tree = self._adaptor.rulePostProcessing(root_0)
                        self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                except RecognitionException, re:
                    self.reportError(re)
                    self.recover(self.input, re)
                    retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
            finally:

                pass

            self._dbg.location(42, 44)
        finally:
            self._dbg.exitRule(self.getGrammarFileName(), "importProtocolDef")
            self.decRuleLevel()
            if self.getRuleLevel() == 0:
                 self._dbg.terminate()

        return retval

    # $ANTLR end "importProtocolDef"

    class importTypeStatement_return(ParserRuleReturnScope):
        def __init__(self):
            super(MonitorParser.importTypeStatement_return, self).__init__()

            self.tree = None




    # $ANTLR start "importTypeStatement"
    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:1: importTypeStatement : 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' ;
    def importTypeStatement(self, ):

        retval = self.importTypeStatement_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal15 = None
        char_literal18 = None
        string_literal20 = None
        StringLiteral21 = None
        char_literal22 = None
        simpleName16 = None

        importTypeDef17 = None

        importTypeDef19 = None


        string_literal15_tree = None
        char_literal18_tree = None
        string_literal20_tree = None
        StringLiteral21_tree = None
        char_literal22_tree = None

        try:
            self._dbg.enterRule(self.getGrammarFileName(), "importTypeStatement")
            if self.getRuleLevel() == 0:
                self._dbg.commence();
            self.incRuleLevel()
            self._dbg.location(44, 1)

            try:
                try:
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:20: ( 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' )
                    self._dbg.enterAlt(1)

                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:22: 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';'
                    pass 
                    root_0 = self._adaptor.nil()

                    self._dbg.location(44, 22)
                    string_literal15=self.match(self.input, 32, self.FOLLOW_32_in_importTypeStatement305)
                    if self._state.backtracking == 0:

                        string_literal15_tree = self._adaptor.createWithPayload(string_literal15)
                        self._adaptor.addChild(root_0, string_literal15_tree)

                    self._dbg.location(44, 31)
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:31: ( simpleName )?
                    alt6 = 2
                    try:
                        self._dbg.enterSubRule(6)
                        try:
                            self._dbg.enterDecision(6)
                            LA6_0 = self.input.LA(1)

                            if (LA6_0 == ID) :
                                LA6_1 = self.input.LA(2)

                                if ((ID <= LA6_1 <= StringLiteral)) :
                                    alt6 = 1
                        finally:
                            self._dbg.exitDecision(6)
                        if alt6 == 1:
                            self._dbg.enterAlt(1)

                            # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:33: simpleName
                            pass 
                            self._dbg.location(44, 33)
                            self._state.following.append(self.FOLLOW_simpleName_in_importTypeStatement309)
                            simpleName16 = self.simpleName()

                            self._state.following.pop()
                            if self._state.backtracking == 0:
                                self._adaptor.addChild(root_0, simpleName16.tree)



                    finally:
                        self._dbg.exitSubRule(6)
                    self._dbg.location(44, 47)
                    self._state.following.append(self.FOLLOW_importTypeDef_in_importTypeStatement314)
                    importTypeDef17 = self.importTypeDef()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, importTypeDef17.tree)
                    self._dbg.location(44, 61)
                    # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:61: ( ',' importTypeDef )*
                    try:
                        self._dbg.enterSubRule(7)
                        while True: #loop7
                            alt7 = 2
                            try:
                                self._dbg.enterDecision(7)
                                LA7_0 = self.input.LA(1)

                                if (LA7_0 == 34) :
                                    alt7 = 1


                            finally:
                                self._dbg.exitDecision(7)
                            if alt7 == 1:
                                self._dbg.enterAlt(1)

                                # /homes/rn710/workspace/MonitorPrototype/Antlr/src/SavedFSM/Monitor.g:44:63: ',' importTypeDef
                                pass 
                                self._dbg.location(44, 66)
                                char_literal18=self.match(self.input, 34, self.FOLLOW_34_in_importTypeStatement318)
                                self._dbg.location(44, 68)
                                self._state.following.append(self.FOLLOW_importTypeDef_in_importTypeStatement321)
                                importTypeDef19 = self.importTypeDef()
